2005-12-20  Geoffrey Keating  <geoffk@apple.com>

	* btest-gcc.sh: Support -j option.

2005-11-28  Geoffrey Keating  <geoffk@geoffk.org>

	* GCC Regression Tester.wdgt: Rename to GCC_Regression_Tester.wdgt.
	* GCC_Regression_Tester.wdgt/Info.plist
	(CFBundleDisplayName): Update for rename.
	(CFBundleName): Use shorter name.
	(CFBundleVersion): Update to 1.0.1.
	(CFBundleShortVersionString): Update to 1.0.1.
	(LSHasLocalizedDisplayName): New.
	(NSHumanReadableCopyright): New.
	* GCC_Regression_Tester.wdgt/de.lproj/InfoPlist.strings: New.
	* GCC_Regression_Tester.wdgt/en.lproj/InfoPlist.strings: New.
	* GCC_Regression_Tester.wdgt/ja.lproj/InfoPlist.strings: New.

	* GCC_Regression_Tester.wdgt/widget.html: Use max-age=30
	to help out intermediate caches.

2005-11-23  Geoffrey Keating  <geoffk@geoffk.org>

	* GCC Regression Tester.wdgt/widget.html: New file.
	* GCC Regression Tester.wdgt/Info.plist: New file.
	* GCC Regression Tester.wdgt/Icon.png: New file.
	* GCC Regression Tester.wdgt/Default.png: New file.
	* README: Describe new files.

2005-06-07  Hans-Peter Nilsson  <hp@bitrange.com>

	* btest-gcc.sh: Add support for option
	--add-passes-despite-regression.

2005-06-06  Hans-Peter Nilsson  <hp@axis.com>

	* btest-gcc.sh <Build>: Don't pass --with-newlib when target is
	"*-linux*".

	* btest-gcc.sh (TESTLOGS): Make libstdc++.sum optional.

2004-11-07  James A. Morrison  <phython@gcc.gnu.org>

	* README: Update website URL.

2004-10-27  Geoffrey Keating  <geoffk@apple.com>

	* btest-gcc.sh (TESTLOGS): The libstdc++-v3 test log is called
	libstd++.sum not libstdc++-v3.sum.

2004-10-26  Geoffrey Keating  <geoffk@apple.com>

	* btest-gcc.sh (TESTLOGS): Examine regressions in libstdc++,
	libffi, and libjava.

2004-05-13  Andrew Pinski  <pinskia@physics.uc.edu>

	* btest-gcc.sh: Remove g77.sum from TESTLOGS.

2003-09-18  Andreas Tobler  <a.tobler@schweiz.ch>

	* btest-gcc.sh: Add make check-target-libffi.

2003-07-31  Andreas Tobler  <a.tobler@schweiz.ch>
